gitlab/issues_text/target_missing/host_missing/accel_missing/2038
simpletrace.py does nothing, and syntax error when called from bash script
Description of problem:
The simpletrace python script appears to do nothing when I run it as above. 

It appears to run (but do nothing) when called from my terminal but there is also a syntax error when I run it from the bash script above.

```
SyntaxError: invalid syntax
  File "<fstring>", line 1
    (pid=)
        ^
```

I think this syntax error is caused by the line `print(f'{event.name} {delta_ns / 1000:0.3f} {pid=} ' + ' '.join(fields))`
Additional information:

